Refactor controllers for improved readability and maintainability
- LeadController: Introduced constants for messages and date format, improved method names for clarity, and organized methods into sections for better structure.
- LinkUtilController: Added constants for messages, refactored search functionality into separate methods, and improved action button creation for better readability.
- LoginController: Added constants for error messages, refactored login flow into smaller methods, and improved loading state management.
- MainController: Introduced constants for FXML paths and styles, refactored navigation logic for clarity, and improved chat panel handling.
- MenuController: Organized methods into groups with comments for better structure and readability.