@@ -9,22 +9,34 @@ import br.com.poderfinanceiro.app.utils.DataUtils;
 import br.com.poderfinanceiro.app.utils.DocumentoUtils;
 import br.com.poderfinanceiro.app.utils.FinanceiroUtils;
 import br.com.poderfinanceiro.app.viewmodel.LeadViewModel;
+import javafx.application.Platform;
+import javafx.beans.binding.Bindings;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
 import javafx.util.StringConverter;
+import javafx.util.converter.LocalDateStringConverter;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.function.Function;
 
 @Component
 @Scope("prototype")
 public class LeadController {
 
-    private final LeadViewModel viewModel;
+    // =========================================================================
+    // CONSTANTES (Clean Code & DRY)
+    // =========================================================================
+    private static final String MSG_NOVO_CONTATO = "Cadastrar Novo Contato";
+    private static final String MSG_EDITAR_CONTATO = "Editando Contato: ";
+    private static final String PADRAO_DATA = "dd/MM/yyyy";
 
+    // =========================================================================
+    // DEPENDÊNCIAS DE UI E FXML
+    // =========================================================================
     @FXML
     private Label lblTituloTela;
     @FXML
@@ -42,33 +54,44 @@ public class LeadController {
     @FXML
     private ScrollPane scrollPrincipal;
 
+    // =========================================================================
+    // ESTADO DA CLASSE E INJEÇÕES
+    // =========================================================================
+    private final LeadViewModel viewModel;
+
     public LeadController(LeadViewModel viewModel) {
         this.viewModel = viewModel;
     }
 
+    // =========================================================================
+    // INICIALIZAÇÃO
+    // =========================================================================
     @FXML
     public void initialize() {
-        configurarListasEFormatores();
+        configurarTituloDinamico();
+        configurarListasEFormatadoresDeData();
         estabelecerBindings();
-        configurarAutoSelecao();
+        configurarAutoSelecao(txtRenda);
+    }
 
-        lblTituloTela.textProperty().bind(javafx.beans.binding.Bindings.createStringBinding(() -> {
+    private void configurarTituloDinamico() {
+        lblTituloTela.textProperty().bind(Bindings.createStringBinding(() -> {
             String nome = viewModel.nomeProperty().get();
-            return (nome == null || nome.trim().isEmpty()) ? "Cadastrar Novo Contato" : "Editando Contato: " + nome;
+            return (nome == null || nome.isBlank()) ? MSG_NOVO_CONTATO : MSG_EDITAR_CONTATO + nome;
         }, viewModel.nomeProperty()));
     }
 
-    private void configurarListasEFormatores() {
+    private void configurarListasEFormatadoresDeData() {
         configurarCombo(cbOrigem, OrigemLeadModel.values(), OrigemLeadModel::fromString);
         configurarCombo(cbVinculo, TipoVinculoModel.values(), TipoVinculoModel::fromString);
         configurarCombo(cbClassificacao, TipoRelacionamentoModel.values(), TipoRelacionamentoModel::fromString);
 
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-        dpDataNascimento.setConverter(new javafx.util.converter.LocalDateStringConverter(formatter, formatter));
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern(PADRAO_DATA);
+        dpDataNascimento.setConverter(new LocalDateStringConverter(formatter, formatter));
     }
 
     private <T extends Enum<T> & LabeledModel> void configurarCombo(ComboBox<T> combo, T[] values,
-            java.util.function.Function<String, T> searcher) {
+            Function<String, T> searcher) {
         combo.getItems().setAll(values);
         combo.setConverter(new StringConverter<T>() {
             @Override
@@ -83,38 +106,53 @@ public class LeadController {
         });
     }
 
+    // =========================================================================
+    // BINDINGS (SRP Aplicado)
+    // =========================================================================
     private void estabelecerBindings() {
-        txtNome.textProperty().bindBidirectional(viewModel.nomeProperty());
-        cbOrigem.valueProperty().bindBidirectional(viewModel.origemProperty());
-        cbClassificacao.valueProperty().bindBidirectional(viewModel.classificacaoProperty());
+        vincularCamposSimples();
+        vincularCamposComFormatacao();
+    }
 
+    private void vincularCamposSimples() {
+        txtNome.textProperty().bindBidirectional(viewModel.nomeProperty());
+        txtMatricula.textProperty().bindBidirectional(viewModel.matriculaProperty());
+        cbOrigem.valueProperty().bindBidirectional(viewModel.origemProperty());
+        cbVinculo.valueProperty().bindBidirectional(viewModel.vinculoProperty());
+        cbClassificacao.valueProperty().bindBidirectional(viewModel.classificacaoProperty());
+    }
+
+    private void vincularCamposComFormatacao() {
+        // Data de Nascimento
         TextFormatter<LocalDate> dataFormatter = DataUtils.criarFormatadorData();
         dpDataNascimento.getEditor().setTextFormatter(dataFormatter);
         dataFormatter.valueProperty().bindBidirectional(viewModel.dataNascimentoProperty());
         dpDataNascimento.valueProperty().bindBidirectional(dataFormatter.valueProperty());
 
-        cbVinculo.valueProperty().bindBidirectional(viewModel.vinculoProperty());
-        txtMatricula.textProperty().bindBidirectional(viewModel.matriculaProperty());
-
+        // Renda
         TextFormatter<BigDecimal> rendaFormatter = FinanceiroUtils.criarFormatadorMoeda();
         txtRenda.setTextFormatter(rendaFormatter);
         rendaFormatter.valueProperty().bindBidirectional(viewModel.rendaProperty());
 
+        // CPF
         TextFormatter<String> cpfFormatter = DocumentoUtils.criarFormatadorCpf();
         txtCpf.setTextFormatter(cpfFormatter);
         cpfFormatter.valueProperty().bindBidirectional(viewModel.cpfProperty());
 
+        // Telefone
         TextFormatter<String> telefoneFormatter = ContatoUtils.criarFormatadorTelefone();
         txtTelefone.setTextFormatter(telefoneFormatter);
         telefoneFormatter.valueProperty().bindBidirectional(viewModel.telefoneProperty());
     }
 
-    private void configurarAutoSelecao() {
-        TextField[] camposFinanceiros = { txtRenda };
-        for (TextField campo : camposFinanceiros) {
+    // =========================================================================
+    // UTILITÁRIOS DE UI (DRY Aplicado)
+    // =========================================================================
+    private void configurarAutoSelecao(TextField... campos) {
+        for (TextField campo : campos) {
             campo.focusedProperty().addListener((obs, estavaFocado, agoraFocado) -> {
                 if (agoraFocado) {
-                    javafx.application.Platform.runLater(campo::selectAll);
+                    Platform.runLater(campo::selectAll);
                 }
             });
         }
@@ -123,5 +161,4 @@ public class LeadController {
     public LeadViewModel getViewModel() {
         return viewModel;
     }
-
 }
